--- a/prepros.cfg
+++ b/prepros.cfg
@@ -25,6 +25,19 @@
           "parents": [],
           "type": "css"
         },
+        "49593181": {
+          "id": "49593181",
+          "path": "assets/img/main/episode04/page3-slider1.png",
+          "output": "assets/img/main/episode04/page3-slider1.png",
+          "name": "page3-slider1.png",
+          "category": "IMAGE",
+          "size": 350294,
+          "type": "png",
+          "initialSize": 350294,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "65073329": {
           "id": "65073329",
           "path": "assets/img/main/page2-1.png",
@@ -34,6 +47,19 @@
           "size": 1263030,
           "type": "png",
           "initialSize": 1263030,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "74893600": {
+          "id": "74893600",
+          "path": "assets/img/main/episode02/page3-slider2.png",
+          "output": "assets/img/main/episode02/page3-slider2.png",
+          "name": "page3-slider2.png",
+          "category": "IMAGE",
+          "size": 363239,
+          "type": "png",
+          "initialSize": 363239,
           "optimized": false,
           "height": 0,
           "width": 0
@@ -56,39 +82,6 @@
           "path": "episode01.html",
           "output": "episode01.html",
           "name": "episode01.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "4cc96c12": {
-          "id": "4cc96c12",
-          "path": "episode02.html",
-          "output": "episode02.html",
-          "name": "episode02.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "0ea9f2b3": {
-          "id": "0ea9f2b3",
-          "path": "episode03.html",
-          "output": "episode03.html",
-          "name": "episode03.html",
-          "category": "JUST_WATCH",
-          "customOutput": false,
-          "imported": false,
-          "parents": [],
-          "type": "html"
-        },
-        "9f9e71d6": {
-          "id": "9f9e71d6",
-          "path": "episode04.html",
-          "output": "episode04.html",
-          "name": "episode04.html",
           "category": "JUST_WATCH",
           "customOutput": false,
           "imported": false,
@@ -559,71 +552,6 @@
           "height": 0,
           "width": 0
         },
-        "91103f55": {
-          "id": "91103f55",
-          "path": "assets/img/main/episode01/page1-bg.png",
-          "output": "assets/img/main/episode01/page1-bg.png",
-          "name": "page1-bg.png",
-          "category": "IMAGE",
-          "size": 1111942,
-          "type": "png",
-          "initialSize": 1111942,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "68605e2b": {
-          "id": "68605e2b",
-          "path": "assets/img/main/episode01/page1-video-btn.png",
-          "output": "assets/img/main/episode01/page1-video-btn.png",
-          "name": "page1-video-btn.png",
-          "category": "IMAGE",
-          "size": 3716,
-          "type": "png",
-          "initialSize": 3716,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "bad8c75f": {
-          "id": "bad8c75f",
-          "path": "assets/img/main/episode01/page3-slider1.png",
-          "output": "assets/img/main/episode01/page3-slider1.png",
-          "name": "page3-slider1.png",
-          "category": "IMAGE",
-          "size": 1263030,
-          "type": "png",
-          "initialSize": 1263030,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "82ab02c0": {
-          "id": "82ab02c0",
-          "path": "assets/img/main/episode01/page3-slider2.png",
-          "output": "assets/img/main/episode01/page3-slider2.png",
-          "name": "page3-slider2.png",
-          "category": "IMAGE",
-          "size": 1682781,
-          "type": "png",
-          "initialSize": 1682781,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
-        "7f198e9a": {
-          "id": "7f198e9a",
-          "path": "assets/img/main/episode01/page3-slider3.png",
-          "output": "assets/img/main/episode01/page3-slider3.png",
-          "name": "page3-slider3.png",
-          "category": "IMAGE",
-          "size": 1350416,
-          "type": "png",
-          "initialSize": 1350416,
-          "optimized": false,
-          "height": 0,
-          "width": 0
-        },
         "6336a441": {
           "id": "6336a441",
           "path": "assets/img/main/episode01/page4-video.png",
@@ -637,18 +565,297 @@
           "height": 0,
           "width": 0
         },
+        "c34c03dd": {
+          "id": "c34c03dd",
+          "path": "assets/img/main/episode02/page3-slider1.png",
+          "output": "assets/img/main/episode02/page3-slider1.png",
+          "name": "page3-slider1.png",
+          "category": "IMAGE",
+          "size": 444531,
+          "type": "png",
+          "initialSize": 444531,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "68ce8f2f": {
+          "id": "68ce8f2f",
+          "path": "assets/img/main/episode02/page3-slider3.png",
+          "output": "assets/img/main/episode02/page3-slider3.png",
+          "name": "page3-slider3.png",
+          "category": "IMAGE",
+          "size": 517605,
+          "type": "png",
+          "initialSize": 517605,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "e754fafa": {
+          "id": "e754fafa",
+          "path": "assets/img/main/episode03/page3-slider1.png",
+          "output": "assets/img/main/episode03/page3-slider1.png",
+          "name": "page3-slider1.png",
+          "category": "IMAGE",
+          "size": 639729,
+          "type": "png",
+          "initialSize": 639729,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "2cf2d488": {
+          "id": "2cf2d488",
+          "path": "assets/img/main/episode03/page3-slider2.png",
+          "output": "assets/img/main/episode03/page3-slider2.png",
+          "name": "page3-slider2.png",
+          "category": "IMAGE",
+          "size": 411795,
+          "type": "png",
+          "initialSize": 411795,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "017ced0e": {
+          "id": "017ced0e",
+          "path": "assets/img/main/episode03/page3-slider3.png",
+          "output": "assets/img/main/episode03/page3-slider3.png",
+          "name": "page3-slider3.png",
+          "category": "IMAGE",
+          "size": 447685,
+          "type": "png",
+          "initialSize": 447685,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bf1a1b47": {
+          "id": "bf1a1b47",
+          "path": "assets/img/main/episode04/page3-slider2.png",
+          "output": "assets/img/main/episode04/page3-slider2.png",
+          "name": "page3-slider2.png",
+          "category": "IMAGE",
+          "size": 519862,
+          "type": "png",
+          "initialSize": 519862,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "0ab03788": {
+          "id": "0ab03788",
+          "path": "assets/img/main/episode04/page3-slider3.png",
+          "output": "assets/img/main/episode04/page3-slider3.png",
+          "name": "page3-slider3.png",
+          "category": "IMAGE",
+          "size": 389999,
+          "type": "png",
+          "initialSize": 389999,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "60007e6a": {
+          "id": "60007e6a",
+          "path": "assets/img/main/episode02/page1-bg.png",
+          "output": "assets/img/main/episode02/page1-bg.png",
+          "name": "page1-bg.png",
+          "category": "IMAGE",
+          "size": 329913,
+          "type": "png",
+          "initialSize": 329913,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "66cf3b10": {
+          "id": "66cf3b10",
+          "path": "assets/img/main/episode03/page1-bg.png",
+          "output": "assets/img/main/episode03/page1-bg.png",
+          "name": "page1-bg.png",
+          "category": "IMAGE",
+          "size": 288155,
+          "type": "png",
+          "initialSize": 288155,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "bad741c6": {
+          "id": "bad741c6",
+          "path": "assets/img/main/episode04/page1-bg.png",
+          "output": "assets/img/main/episode04/page1-bg.png",
+          "name": "page1-bg.png",
+          "category": "IMAGE",
+          "size": 328652,
+          "type": "png",
+          "initialSize": 328652,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "4cc96c12": {
+          "id": "4cc96c12",
+          "path": "episode02.html",
+          "output": "episode02.html",
+          "name": "episode02.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "0ea9f2b3": {
+          "id": "0ea9f2b3",
+          "path": "episode03.html",
+          "output": "episode03.html",
+          "name": "episode03.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "9f9e71d6": {
+          "id": "9f9e71d6",
+          "path": "episode04.html",
+          "output": "episode04.html",
+          "name": "episode04.html",
+          "category": "JUST_WATCH",
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "html"
+        },
+        "febb6d01": {
+          "id": "febb6d01",
+          "path": "assets/css/main/episode/episode02.css",
+          "output": "assets/css/main/episode/episode02-dist.css",
+          "name": "episode02.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "7cb1c4f0": {
+          "id": "7cb1c4f0",
+          "path": "assets/css/main/episode/episode03.css",
+          "output": "assets/css/main/episode/episode03-dist.css",
+          "name": "episode03.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "f6b61b23": {
+          "id": "f6b61b23",
+          "path": "assets/css/main/episode/episode04.css",
+          "output": "assets/css/main/episode/episode04-dist.css",
+          "name": "episode04.css",
+          "category": "CSS",
+          "autoCompile": false,
+          "sourceMaps": false,
+          "compress": true,
+          "cssnext": false,
+          "autoprefixer": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "css"
+        },
+        "bad8c75f": {
+          "id": "bad8c75f",
+          "path": "assets/img/main/episode01/page3-slider1.png",
+          "output": "assets/img/main/episode01/page3-slider1.png",
+          "name": "page3-slider1.png",
+          "category": "IMAGE",
+          "size": 289919,
+          "type": "png",
+          "initialSize": 289919,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "91103f55": {
+          "id": "91103f55",
+          "path": "assets/img/main/episode01/page1-bg.png",
+          "output": "assets/img/main/episode01/page1-bg.png",
+          "name": "page1-bg.png",
+          "category": "IMAGE",
+          "size": 368850,
+          "type": "png",
+          "initialSize": 368850,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "7f198e9a": {
+          "id": "7f198e9a",
+          "path": "assets/img/main/episode01/page3-slider3.png",
+          "output": "assets/img/main/episode01/page3-slider3.png",
+          "name": "page3-slider3.png",
+          "category": "IMAGE",
+          "size": 341569,
+          "type": "png",
+          "initialSize": 341569,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
+        "82ab02c0": {
+          "id": "82ab02c0",
+          "path": "assets/img/main/episode01/page3-slider2.png",
+          "output": "assets/img/main/episode01/page3-slider2.png",
+          "name": "page3-slider2.png",
+          "category": "IMAGE",
+          "size": 426372,
+          "type": "png",
+          "initialSize": 426372,
+          "optimized": false,
+          "height": 0,
+          "width": 0
+        },
         "8ab179b6": {
           "id": "8ab179b6",
           "path": "assets/img/main/episode01/page5-bg.png",
           "output": "assets/img/main/episode01/page5-bg.png",
           "name": "page5-bg.png",
           "category": "IMAGE",
-          "size": 1213178,
+          "size": 259636,
           "type": "png",
-          "initialSize": 1213178,
+          "initialSize": 259636,
           "optimized": false,
           "height": 0,
           "width": 0
+        },
+        "383023e0": {
+          "id": "383023e0",
+          "path": "assets/js/update.js",
+          "output": "assets/js/update-dist.js",
+          "name": "update.js",
+          "category": "JS",
+          "autoCompile": false,
+          "uglify": true,
+          "mangle": true,
+          "babel": false,
+          "sourceMaps": false,
+          "customOutput": false,
+          "imported": false,
+          "parents": [],
+          "type": "javascript"
         }
       },
       "deploymentHistory": {},
